updated for Qatar 2022 new Spring version New user registration method